    Reestruturação da tela de cadastro/edição de regras permitindo reordenamento
com "arrastar e soltar"
    Adição de Alias de Expressão Regular para ser usado com as Regras de Negócio
    Corrigido sistema de controle de tempo em minutos para ramais e troncos.
    Corrigido bug na seleção do modo debug.
    Corrigido bug na restauração da ação de reescrita de requisição nas regras
de negócio.

1.1.5:
    Adição de um sistema de plugins para as Regras de Negócio.
    Transferências agora passam pelo AGI do snep.
        Transferências para números externos.
        Transferências funcionando com Siga-me para números externos.

1.1.4:
    Correção de bug na criação dos vinculos dos ramais.
    Adicionado modo de DTMF para discagem de qualquer tipo de tronco.
    Corrigido comportamento das Tarifas

1.1.3:
    Corrigido ação Editar origem/destino nas regras de negócio onde sufixo não
era adicionado.
    Melhorado sistema de limite de tempo na chamada telefonica para ações de
discagem via troncos.
    Adicionado verificação antes de salvar uma regra de negócio onde um tronco
não seja especificado.
    Adicionado modo de discagem via DTMF para todos os tipos de tronco.
    Corrigido bug em relatório de chamadas para consulta por grupos de ramais em
destino.
    Corrigido bug no envio de emails após uso de tronco redundante.

1.1.2:
    Mudança na forma como são executadas as instruções ao banco de dados na
inclusão de ramais nas filas.
    Correção de análise de permissões no menu do sistema.

1.1.1:
    Correção no Cadeado
    Correção nos Vinculos do relatório de chamadas.
    Atualização nos manuais e menus de ajuda.
    Correções menores em todo o sistema.

1.1.0:
    Correção no voicemail com interface simplificada, remoção de campos não
utilizados na tela de cadastro do ramal.
    Correção de bug na edição de ramais khomp.
    Suporte a ramais sip do tipo friend.
    Nova estrutura de menu com suporte a itens de módulos plugaveis.